# reddwarf-admin

./: .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile.alpine  Dockerfile.debian  README.md  README.zh-CN.md  Rocket.toml  diesel-dict-schema.sh  diesel-dict.toml  diesel-dolphin-model.sh  diesel-dolphin-schema.sh  diesel-dolphin.toml  diesel-quark-model.sh  diesel-rhythm.toml  diesel.toml  settings.toml
.github/workflows/: reddwarf-admin.yml
docs/api/cruise/channel/: channel.md  login_user_info.rs
docs/api/overview/: app.md  iap_product.md
docs/tips/: postgresql-fulltext-search.md  switch-to-alpine-container.md  why-rust.md
scripts/: build-alpine-docker.sh  build-app.sh  yapi-connect.sh
scripts/diesel/: diesel-dict-model.sh  diesel-dolphin-model.sh  diesel-dolphin-schema.sh  diesel-dolphin.toml  diesel-quark-model.sh  diesel-quark-schema.sh  diesel-quark.toml  diesel-rhythm-model.sh  diesel-rhythm-schema.sh  diesel-rhythm.toml
src/: main.rs  models.rs  schema.rs
src/biz/: mod.rs
src/biz/app/: app_controller.rs  iap_product_controller.rs  mod.rs  product_controller.rs  tag_controller.rs
src/biz/app/gallery/: mod.rs  repo_app_controller.rs
src/biz/app/job/: mod.rs
src/biz/app/music/: mod.rs  music_controller.rs
src/biz/common/: health_controller.rs  mod.rs  sys_dict_controller.rs
src/biz/home/: home_controller.rs
src/biz/system/: mod.rs
src/biz/user/: user_controller.rs
src/common/: mod.rs
src/common/db/: database.rs
src/common/enums/: mod.rs  resource_type.rs
src/model/: mod.rs
src/model/diesel/: mod.rs
src/model/request/: mod.rs
src/model/response/: mod.rs
src/service/: mod.rs
src/service/app/: app_service.rs  iap_product_service.rs  mod.rs  product_service.rs  tag_service.rs
src/service/home/: home_service.rs  mod.rs
src/service/permission/: mod.rs
src/service/sys/: mod.rs  sys_dict_service.rs
src/service/user/: mod.rs  user_service.rs
src/statistic/app/: mod.rs
src/test/: mod.rs
src/test/utils/: datetime_test.rs  mod.rs
(+176 files in other folders)
