[package]
name = "reddwarf-admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rocket = { version = "=0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0.64", features = ["derive"] }
serde_json = "1.0.64"

# database
diesel = { version = "1.4.8", features = ["postgres","64-column-tables","chrono","serde_json"] }
dotenv = "0.15.0"
chrono = {version = "0.4",features = ["serde"]}
log = "0.4"
env_logger = "0.9.0"
config = "0.11"
num-traits = "0.2"
tokio = { version = "1.17.0", features = ["full"] }
futures = "0.3"
regex = "1.5"

# reddwarf public component
rust_wheel = { git = "https://github.com/jiangxiaoqiang/rust_wheel.git" }

rand = "0.8.5"